--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="container">
         <h1>Installer Programming List</h1>
-        <input type="text" id="searchBox" placeholder="Search...">
+        <div class="search-container">
+            <input type="text" id="searchBox" placeholder="Search...">
+            <button id="searchButton">Search</button>
+            <button id="clearButton">Clear</button>
+        </div>
         <label>
             <input type="checkbox" id="selectParents"> Select Parents
         </label>
