--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>Installer Programming List</title>
-    <!-- Link to our CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,27 +10,23 @@
 <div class="container">
     <h1>Installer Programming List</h1>
 
+    <!-- Search box + button -->
     <div class="search-container">
         <input type="text" id="searchBox" placeholder="Search..." />
         <button id="searchButton">Search</button>
-
-        <label style="margin-left: 1em;">
-            <input type="checkbox" id="selectWithParents" />
-            Select with Parents
-        </label>
     </div>
 
-    <!-- The tree will be built inside this element -->
+    <!-- The collapsible list -->
     <div id="programmingList"></div>
 
+    <!-- Generate button + Output textarea -->
     <button id="generateButton">Generate</button>
     <br/>
     <textarea id="outputText" rows="10" readonly></textarea>
 </div>
 
-<!-- data.js must load first so 'installerData' is already defined -->
+<!-- Must load data.js first so installerData is defined -->
 <script src="data.js"></script>
-<!-- Then script.js uses installerData to build the UI -->
 <script src="script.js"></script>
 
 </body>
