--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="searchBox" placeholder="Search..." />
         <button id="searchButton">Search</button>
         <button id="clearButton">Clear</button>
+        <button id="collapseAllBtn">Collapse All</button>
     </div>
 
     <div id="programmingList"></div>
