--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <textarea id="outputText" rows="10" readonly></textarea>
 </div>
 
+<!-- data.js must load first so installerData is defined -->
 <script src="data.js"></script>
 <script src="script.js"></script>
 </body>
